--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@testing-library/user-event": "^13.5.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^19.1.1",
+    "react-scripts": "5.0.1",
     "three": "^0.180.0",
     "web-vitals": "^2.1.4"
   },
